made flask ui work with ranking keyword searches

--- a/templates/index_uusi.html
+++ b/templates/index_uusi.html
@@ -7,11 +7,11 @@
         <p>Your search word can be a keyword, actor or genre.</p>
         <form>
             <input type="text" name="query" autofocus><br>
-            <input type="radio" id="keyword" name="engine" value="ranking">
+            <input type="radio" id="keyword" name="engine" value="keyword">
             <label for="keyword">Keyword</label>
-            <input type="radio" id="actor" name="engine" value="boolean">
+            <input type="radio" id="actor" name="engine" value="actor">
             <label for="actor">Actor</label><br>
-            <input type="radio" id="genre" name="engine" value="boolean">
+            <input type="radio" id="genre" name="engine" value="genre">
             <label for="genre">Genre</label>
             <input type="submit" value="Search">
         </form>
