Add year search

--- a/templates/index_uusi.html
+++ b/templates/index_uusi.html
@@ -13,6 +13,8 @@
             <label for="actor">Actor</label><br>
             <input type="radio" id="genre" name="engine" value="genre">
             <label for="genre">Genre</label>
+            <input type="radio" id="year" name="engine" value="year">
+            <label for="year">Year</label><br>
             <input type="submit" value="Search">
         </form>
         {% if result_summary %}
