--- a/templates/index_uusi.html
+++ b/templates/index_uusi.html
@@ -1,12 +1,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Palsternakka search engine</title>
+        <title>The Palsternakka Search Engine</title>
+        <style>body{text-align: center;}</style>
+        <style>table{text-align: center;}</style>
     </head>
     <body>
+        <br>
+        <h1>The Palsternakka Search Engine</h1>
+        <br>
         <p>Your search word can be a keyword, actor or genre.</p>
         <form>
             <input type="text" name="query" autofocus><br>
+            <br>
             <input type="radio" id="keyword" name="engine" value="keyword">
             <label for="keyword">Keyword</label>
             <input type="radio" id="actor" name="engine" value="actor">
@@ -15,6 +21,7 @@
             <label for="genre">Genre</label>
             <input type="radio" id="year" name="engine" value="year">
             <label for="year">Year</label><br>
+            <br>
             <input type="submit" value="Search">
         </form>
         {% if result_summary %}
@@ -28,7 +35,7 @@
 	    {% if matches %}
             {% for item in matches %}
             <tr>
-                <td>{{ item }}</td>
+                <td> {{ item }} </td>
             </tr>
             <!--End for loop-->
             {% endfor %}
