#17 added style="width:100%" to html, now all text is center-aligned

--- a/templates/index_uusi.html
+++ b/templates/index_uusi.html
@@ -3,7 +3,11 @@
         <meta charset="utf-8">
         <title>The Palsternakka Search Engine</title>
         <style>body{text-align: center;}</style>
-        <style>table{text-align: center;}</style>
+        <style>table{
+            text-align: center;
+            width: 100%
+            }
+        </style>
         <style>body{font-family: Georgia, 'Times New Roman', Times, serif;}</style>
     </head>
     <body style="background-color:lavender;">
