#20 Implemented a basic plot

--- a/templates/index_uusi.html
+++ b/templates/index_uusi.html
@@ -48,6 +48,7 @@
             <!--End for loop-->
             {% endfor %}
         </table>
+        <img src='/static/bar_chart_movies.png'>
         {% endif %}
     </body>
 </html>
