put back accidentally removed sections of code, modified README

--- a/templates/index_uusi.html
+++ b/templates/index_uusi.html
@@ -14,12 +14,10 @@
         <br>
         <h1>The Palsternakka Search Engine</h1>
         <br>
-        <p>You can search for title, actor, genre, year or keyword.</p>
+        <p>You can search for actor, genre, year or keyword.</p>
         <form>
             <input type="text" name="query" autofocus><br>
             <br>
-            <input type="radio" id="title" name="engine" value="title">
-            <label for="title">Title</label>
             <input type="radio" id="keyword" name="engine" value="keyword">
             <label for="keyword">Keyword</label>
             <input type="radio" id="actor" name="engine" value="actor">
